css/widget-styles.css
.ossw-search-bar-wrapper {
	position: relative;
}

#search-bar-input {
	width: 100%;
	border: 2px solid #dae5ee;
	border-radius: 4px;
	height: 37px;
	padding: 0 0 0 10px;
	background: #fff;
	color: #30739C;
	font-size: 12px;
	text-transform: lowercase;
	font-weight: 400;
}

#search-bar-input::placeholder {
	color: #C7CAE0;
}

#search-bar-input:focus {
	border-color: #30739C;
	outline: none;
}

.ossw-search-bar-close {
	cursor:	pointer;
	position: absolute;
	top: 10px;
	right: 15px;
	color: #dae5ee;
	z-index: 1001;
	font-size: 16px;
}

.ossw-search-bar-close:hover {
	color: #30739C;
}

.ossw-no-results {
	font-size: 12px;
	font-weight: 500;
	line-height: 1;
	color: #8B9BAD;
}

.ossw-search-suggestions {
	display: none;
	border: 1px solid #DDDDDD;
	padding: 5px;
	position: absolute;
	top: 50px;
	z-index: 9999;
	background: white;
	width: 100%;
}

.ossw-result-item {
	padding:10px 5px;
	display:block;
	position:relative;
	cursor:pointer;
	border-bottom:1px solid #E9EDF2;
	text-align:left;
	text-decoration:none
}

.ossw-result-item:before{
	right:22px;
	top:50%;
	margin-top:-3px;
	width:6px;
	height:6px;
	border-style:solid;
	border-width:1px 1px 0 0;
	border-color:#C5D1DE;
	-webkit-transform:rotate(45deg);
	-moz-transform:rotate(45deg);
	-ms-transform:rotate(45deg);
	transform:rotate(45deg);
	display:block;
	position:absolute;
	content:""
}

.ossw-result-item:after{
	display:table;
	content:"";
	width:0;
	height:0;
	clear:both
}

.ossw-result-item:hover {
	background-color: rgba(0,0,0,0.05);
}
.ossw-result-item:hover:before {
	border-color:#8B9BAD
}
.ossw-result-item:hover .ossw-result-detail {
	color:#3B454F
}

.ossw-result-item em{
	font-style:normal;
	-webkit-box-shadow:inset 0 -1px 0 rgba(0,0,0,0.1);
	-moz-box-shadow:inset 0 -1px 0 rgba(0,0,0,0.1);
	box-shadow:inset 0 -1px 0 rgba(0,0,0,0.1);
	font-weight: bold;
	background-color: #f6fcfe;
}

.ossw-result-heading {
	width: 90%;
	font-weight:500;
	font-size:13px;
	line-height:1.2;
	margin-bottom:4px;
	color:#258BF8;
	white-space:nowrap;
	overflow:hidden;
	-ms-text-overflow:ellipsis;
	text-overflow:ellipsis;
}


.ossw-result-detail {
	width: 90%;
	max-height:31px;
	overflow:hidden;
	font-size:12px;
	font-weight:400;
	line-height:1.4;
	color:#8B9BAD
}

.ossw-search-results {
	display: none;
}

.ossw-search-results .ossw-overlay {
	position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.5);z-index:99999991
}

.ossw-search-results .ossw-overlay.ossw-dismiss {
	display:none
}

.ossw-search-results .ossw-overlay.ossw-dismiss .ossw-container {
	opacity:0;
	-webkit-animation:st-ui-fade-out ease-in-out 0.5s;
	-moz-animation:st-ui-fade-out ease-in-out 0.5s;
	animation:st-ui-fade-out ease-in-out 0.5s
}

.ossw-search-results .ossw-container {
	position: fixed;
	top: 0;
	left: 50%;
	margin: 64px 0 0 -320px;
	width: 640px;
	height: 80%;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	background: #fff;
	z-index: 99999992;
	-webkit-animation: st-ui-fade-in ease-in-out 0.5s;
	-moz-animation: st-ui-fade-in ease-in-out 0.5s;
	animation: st-ui-fade-in ease-in-out 0.5s;
	overflow: hidden;
	-webkit-text-size-adjust: none;
	-ms-text-size-adjust: none;
	text-size-adjust: none;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius: 5px;
	font-family: system, -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Lucida Grande", sans-serif;
}

.ossw-search-results .ossw-container .ossw-header-wrapper {
	margin: 0;
	padding: 0;
	border: 0;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	-webkit-font-smoothing: antialiased;
	-webkit-text-size-adjust: none;
	-ms-text-size-adjust: none;
	text-size-adjust: none;
	font-family: system, -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Lucida Grande", sans-serif;
}

.ossw-search-results .ossw-container .ossw-header-wrapper .ossw-header {
	position: relative;
	width: 100%;
	height: 49px;
	border-bottom: 1px solid rgba(0,0,0,0.1);
	z-index: 99999997;
	background: #F9FAFB;
	-moz-background-clip: padding-box;
	background-clip: padding-box;
	-webkit-backface-visibility: hidden;
	-moz-backface-visibility: hidden;
	backface-visibility: hidden;
	-webkit-border-radius: 5px 5px 0 0;
	-moz-border-radius: 5px 5px 0 0;
	border-radius: 5px 5px 0 0;
}

.ossw-search-results .ossw-container .ossw-header-wrapper .ossw-header input{
	padding: 0 120px 0 36px;
	width: 100%;
	height: 48px;
	background: transparent;
	border: 0;
	outline: none;
	color: #3B454F;
	font-size: 15px;
	font-weight: 500;
	line-height: 19px;
	-webkit-border-radius: 5px 5px 0 0;
	-moz-border-radius: 5px 5px 0 0;
	border-radius: 5px 5px 0 0;
	font-family: system, -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Lucida Grande", sans-serif;
}

.ossw-search-results .ossw-container .ossw-header-wrapper .ossw-header input:focus{
	height:50px;border-bottom:2px solid #33AAFF
}

.ossw-search-results .ossw-container .ossw-header-wrapper .ossw-header .ossw-search-icon {
	display: block;
	position: absolute;
	top: 18px;
	left: 15px;
	width: 13px;
	height: 13px;
	pointer-events: none;
}

.ossw-search-results .ossw-container .ossw-header-wrapper .ossw-header .ossw-search-icon .fa {
	opacity: 0.6;
}

.ossw-search-results .ossw-container .ossw-header-wrapper .ossw-header .ossw-close-icon {
	display: block;
	position: absolute;
	top: 16px;
	right: 14px;
	width: 16px;
	height: 16px;
	cursor: pointer;
}

.ossw-search-results .ossw-container .ossw-header-wrapper .ossw-header .ossw-close-icon .fa {
	opacity: 0.6;
}

.ossw-search-results .ossw-container .ossw-header-wrapper .ossw-header .ossw-close-icon .fa:hover {
	opacity: 1;
}

.ossw-search-results .ossw-suggestions-wrapper {
	position: absolute;
	top: 0;
	left: 0;
	margin: 0;
	padding: 68px 10px;
	width: 50%;
	height: 100%;
	z-index: 99999995;
	background: #fff;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	border: 0;
	-webkit-animation: st-ui-slide-in ease-in-out 0.5s;
	-moz-animation: st-ui-slide-in ease-in-out 0.5s;
	animation: st-ui-slide-in ease-in-out 0.5s;
	-webkit-box-shadow: 1px 0 3px rgba(0,0,0,0.2);
	-moz-box-shadow: 1px 0 3px rgba(0,0,0,0.2);
	box-shadow: 1px 0 3px rgba(0,0,0,0.2);
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius: 5px;
}

.ossw-search-results .ossw-suggestions-wrapper .ossw-heading {
	margin-bottom: 0;
	padding: 6px 18px 14px 0;
	border-bottom: 1px solid #E9EDF2;
	color: rgba(0,0,0,0.4);
}

.ossw-search-results .ossw-results-wrapper {
	position: absolute;
	top: 0;
	left: 0;
	padding: 50px 0px;
	width: 100%;
	height: 100%;
	overflow: auto;
	-webkit-overflow-scrolling: touch;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius: 5px;
}

.ossw-search-results .ossw-results-wrapper .ossw-results {
	padding: 0 10px 50px 10px;
}

.ossw-search-results .ossw-footer-wrapper .ossw-footer {
	position: absolute;
	bottom: 0;
	left: 0;
	width: 100%;
	height: 49px;
	border-top: 1px solid rgba(0,0,0,0.1);
	background: #F9FAFB;
	z-index: 99999996;
	-moz-background-clip: padding-box;
	background-clip: padding-box;
	-webkit-backface-visibility: hidden;
	-moz-backface-visibility: hidden;
	backface-visibility: hidden;
	-webkit-border-radius: 0 0 5px 5px;
	-moz-border-radius: 0 0 5px 5px;
	border-radius: 0 0 5px 5px;
}

.ossw-search-results .ossw-footer-wrapper .ossw-footer .ossw-summary {
	display: block;
	position: absolute;
	top: 18px;
	left: 16px;
	float: left;
	font-size: 12px;
	font-weight: 500;
	line-height: 1;
	color: #8B9BAD;
}

.ossw-search-results .ossw-footer-wrapper .ossw-footer .ossw-pagination {
	display: block;
	padding-right: 9px;
	float: right;
	text-align: right;
	font-size: 12px;
	font-weight: 500;
	color: #8B9BAD;
	line-height: 1;
}

.ossw-search-results .ossw-footer-wrapper .ossw-footer .ossw-pagination .ossw-page-link {
	display: inline-block;
	padding: 18px 7px;
	text-decoration: none;
	color: #258BF8;
	text-transform: uppercase;
}

.ossw-search-results .ossw-footer-wrapper .ossw-footer .ossw-pagination .ossw-page-link.ossw-active {
	color: #8B9BAD;
}

.ossw-search-results .ossw-footer-wrapper .ossw-footer .ossw-pagination .ossw-page-link .ossw-right-arrow {
	display: inline-block;
	position: relative;
	width: 6px;
	height: 6px;
	margin: 0 0 0 2px;
}

